feature: make ProductService.getCompanyAttributes() return both default and artificial attributes